@@ -5100,7 +5100,8 @@ If anything goes wrong, this function signals an `treesit-error'."
           (when commit
             (treesit--git-checkout-branch workdir commit))
           (setq version (treesit--language-git-revision workdir))
-          (treesit--build-grammar workdir out-dir lang source-dir cc c++))
+          (treesit--build-grammar workdir out-dir lang source-dir cc c++)
+          (treesit--copy-queries workdir out-dir lang))
       ;; Remove workdir if it's not a repo owned by user and we
       ;; managed to create it in the first place.
       (when (and (not url-is-dir) (file-exists-p workdir))
@@ -5178,6 +5179,16 @@ If anything goes wrong, this function signals an `treesit-error'."
         ;; Ignore errors, in case the old version is still used.
         (ignore-errors (delete-file old-fname)))
       (message "Library installed to %s/%s" out-dir lib-name))))
+
+(defun treesit--copy-queries (workdir out-dir lang)
+  "Copy the LANG \"queries\" directory from WORKDIR to OUT-DIR."
+  (let* ((query-dir (expand-file-name "queries" workdir))
+         (dest-dir (expand-file-name (format "queries/%s" lang) out-dir)))
+    (when (file-directory-p query-dir)
+      (unless (file-directory-p dest-dir)
+        (make-directory dest-dir t))
+      (dolist (file (directory-files query-dir t "\\.scm\\'" t))
+        (copy-file file (expand-file-name (file-name-nondirectory file) dest-dir) t)))))
 
 ;;; Shortdocs
 
