@@ -1651,6 +1651,13 @@ A major mode based on the tree-sitter library for editing "go.work"
 files.  If tree-sitter is properly set-up by the user, it can be
 enabled for files named "go.work".
 
+** The file treesit-x.el defines a number of simple treesit modes.
+Using the new macro 'define-treesit-generic-mode' generic modes are
+defined including, but not limited to, 'gitattributes-generic-ts-mode'.
+Visiting a file in such mode ask for confirmation before installing
+its tree-sitter grammar.  Then it highlights the visited file
+according to syntax defined by the grammar.
+
 
 * Incompatible Lisp Changes in Emacs 31.1
 
